--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           command: build
           args: --release --all-features
-      - run: echo ${{GH_PAT | docker login ghcr.io -u clanny --password-stdin
+      - run: echo $GH_PAT | docker login ghcr.io -u clanny --password-stdin
         env:
           GH_PAT: ${{ secrets.GH_SECRET }}
         name: Login to GH container registry
